# profit-action

./: .cursorignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
backend/: README.md  pyproject.toml
backend/app/: config.py  constants.py  main.py
backend/app/api/: chat.py  conversations.py  health.py  products.py
backend/app/data/: products.json
backend/app/models/: analysis.py  catalog.py  chat.py  conversation.py  health.py
backend/app/services/: analysis_demo.py  analysis_store.py  chat_dispatch.py  chat_live.py  classify.py  conversation_store.py  field_registry.py  metrics.py  openai_client.py  plan_tool_schema.py  repository.py  stream_orchestrator.py  stream_protocol.py
backend/app/services/analysis/: __init__.py  aggregate.py  engine.py  filters.py  present.py  product_metrics.py
backend/scripts/: generate_products.py
backend/tests/: test_analysis_demo.py  test_analysis_engine.py  test_chat_integration.py  test_chat_live.py  test_classify.py  test_conversations.py  test_field_registry.py  test_plan_schema_sync.py  test_products_errors.py  test_stream_orchestrator.py  test_stream_protocol.py
contracts/: openapi.json
docs/: APPLICATION-GUIDE.md  ARCHITECTURE.md  BACKEND-API.md  DATA.md  DESIGN-SYSTEM.md  LOCAL-RUN.md  README.md
frontend/: .prettierignore  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: contracts.mjs  export_openapi.py  generate_zod_schemas.py  run-backend-dev.mjs  run-dev.mjs  (+3 more)
(+162 files in other folders)
