[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "profit-action-backend"
version = "0.1.0"
description = "FastAPI backend for Profit Action"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "openai>=1.60.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Demo-grade but stricter than crash-only: unused / undefined / bugbear / pyupgrade / isort.
# E501 ignored — Polish prompt strings and long test assertions.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
